--- a/index.css
+++ b/index.css
@@ -8,20 +8,35 @@ body {
 
 .box {
     position: absolute;
-    top: 30%;
-    left: 50%;
-    margin: 0 auto;
+    top: 20%;
+    left: 43%;
     color: white;
-    /* text-align: center;
-    vertical-align: middle; */
+    font-size: 25px;
 }
+
 
 .clicked {
     color: #7f8c8d;
 }
 
-form {
-    text-align: center;
+input {
+    font-size: 18px;
+    border: none;
+    border-style: 0;
+    border-radius: 10px;
+    padding: 5px;
+    margin: 5px;
+}
+
+input:focus {
+    outline: none;
+}
+
+button {
+    font-size: 20px;
+    background-color: rgb(247, 155, 155);
+    color: white;
+    opacity: 80%;
 }
 
 .form,
